samples/bad/bad031.lat
// Variable declaration as an only while instruction

int main () {
  while(true)
    int x;
 return 0 ;
}